--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -6,7 +6,7 @@
   "cc.components.Header.contact": "Contatti",
 
   "cc.components.Footer.copyright": "© 2017 Cuba Conmigo. Diritti riservati. ",
-  "cc.components.Footer.designer": "Disegnato da Polymita.",
+  "cc.components.Footer.designer": "Disegnato con {love} da {link}.",
 
   "cc.containers.HomePage.home.header": "Inizio",
   "cc.containers.HomePage.about.header": "Su di noi",
