Añadir informaciones al pie de página

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,7 +11,7 @@
   "cc.containers.HomePage.travel.header": "Travel",
   "cc.containers.HomePage.contact.header": "Contact",
 
-  "cc.components.Footer.copyright": "© 2017 Cuba Conmigo. All rights reserved. ",
+  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
   "cc.components.Footer.designer": "Designed with {love} by {link}.",
 
   "cc.containers.About.header": "We can do it for you!",
