--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -11,7 +11,7 @@
   "cc.containers.HomePage.travel.header": "Viajes",
   "cc.containers.HomePage.contact.header": "Contacto",
 
-  "cc.components.Footer.copyright": "© 2017 Cuba Conmigo. Todos los derechos reservados. ",
+  "cc.components.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
   "cc.components.Footer.designer": "Diseñado con {love} por {link}.",
 
   "cc.containers.About.header": "¡Nosotros nos encargamos!",
