--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -5,7 +5,7 @@
   "cc.components.Header.travel": "Viaggi",
   "cc.components.Header.contact": "Contatti",
 
-  "cc.components.Footer.copyright": "© 2017 Cuba Conmigo. Diritti riservati. ",
+  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. Diritti riservati. ",
   "cc.components.Footer.designer": "Disegnato con {love} da {link}.",
 
   "cc.containers.HomePage.home.header": "Inizio",
