Add Featurette component.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,32 +5,32 @@
   "cc.components.Header.travel": "Travel",
   "cc.components.Header.contact": "Contact",
 
-  "cc.containers.HomePage.home.header": "Home",
-  "cc.containers.HomePage.about.header": "About us",
-  "cc.containers.HomePage.services.header": "Services",
-  "cc.containers.HomePage.travel.header": "Travel",
-  "cc.containers.HomePage.contact.header": "Contact",
+  "cc.components.HomePage.home.header": "Home",
+  "cc.components.HomePage.about.header": "About us",
+  "cc.components.HomePage.services.header": "Services",
+  "cc.components.HomePage.travel.header": "Travel",
+  "cc.components.HomePage.contact.header": "Contact",
 
   "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
   "cc.components.Footer.designer": "Designed with {love} by {link}.",
 
-  "cc.containers.About.header": "We can do it for you!",
-  "cc.containers.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
+  "cc.components.About.header": "We can do it for you!",
+  "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
-  "cc.containers.Translations.header": "Translations",
+  "cc.components.Translations.header": "Translations",
 
-  "cc.containers.Contact.header": "Who we are & Contact",
-  "cc.containers.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
-  "cc.containers.Contact.address.title": "Address",
-  "cc.containers.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
-  "cc.containers.Contact.email.title": "Email",
-  "cc.containers.Contact.phone.title": "Telephone",
-  "cc.containers.Contact.phone.office.title": "Office",
-  "cc.containers.Contact.phone.documents.title": "Documents",
-  "cc.containers.Contact.phone.travel.title": "Travel",
-  "cc.containers.Contact.phone.packages.title": "Packages",
-  "cc.containers.Contact.phone.containers.title": "Containers",
-  "cc.containers.Contact.phone.translations.title": "Translations",
-  "cc.containers.Contact.openingTime.title": "Opening time",
+  "cc.components.Contact.header": "Who we are & Contact",
+  "cc.components.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
+  "cc.components.Contact.address.title": "Address",
+  "cc.components.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
+  "cc.components.Contact.email.title": "Email",
+  "cc.components.Contact.phone.title": "Telephone",
+  "cc.components.Contact.phone.office.title": "Office",
+  "cc.components.Contact.phone.documents.title": "Documents",
+  "cc.components.Contact.phone.travel.title": "Travel",
+  "cc.components.Contact.phone.packages.title": "Packages",
+  "cc.components.Contact.phone.containers.title": "Containers",
+  "cc.components.Contact.phone.translations.title": "Translations",
+  "cc.components.Contact.openingTime.title": "Opening time",
   "cc.dummy.end": ""
 }
