--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -11,32 +11,39 @@
   "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. Diritti riservati. ",
   "cc.components.Footer.designer": "Disegnato con {love} da {link}.",
 
-  "cc.containers.HomePage.home.header": "Inizio",
-  "cc.containers.HomePage.about.header": "Su di noi",
-  "cc.containers.HomePage.services.header": "Servizi",
-  "cc.containers.HomePage.travel.header": "Pacchetti turistici",
-  "cc.containers.HomePage.packages.header": "Pacchi e Containers",
-  "cc.containers.HomePage.legal.header": "Pratiche legali",
-  "cc.containers.HomePage.contact.header": "Contatti",
-  "cc.containers.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.components.HomePage.home.header": "Inizio",
+  "cc.components.HomePage.about.header": "Su di noi",
+  "cc.components.HomePage.services.header": "Servizi",
+  "cc.components.HomePage.travel.header": "Pacchetti turistici",
+  "cc.components.HomePage.packages.header": "Pacchi e Containers",
+  "cc.components.HomePage.legal.header": "Pratiche legali",
+  "cc.components.HomePage.travel.description": "La nostra esperienza nel settore come agenzia turistica, ci permette di suggerire le migliore soluzioni alle richieste della nostra clientela, organizzando viaggi personalizzati a Cuba.",
+  "cc.components.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
+  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.components.HomePage.contact.header": "Contatti",
+  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
-  "cc.containers.About.header": "Ciò che possiamo fare per te!",
-  "cc.containers.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
+  "cc.components.About.header": "Ciò che possiamo fare per te!",
+  "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
-  "cc.containers.Translations.header": "Traduzione",
+  "cc.components.Services.header": "Servizi",
 
-  "cc.containers.Contact.header": "Dove siamo & Contatti",
-  "cc.containers.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
-  "cc.containers.Contact.address.title": "Indirizzo",
-  "cc.containers.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
-  "cc.containers.Contact.email.title": "Posta elettronica",
-  "cc.containers.Contact.phone.title": "Telefono",
-  "cc.containers.Contact.phone.office.title": "Ufficio",
-  "cc.containers.Contact.phone.documents.title": "Documenti",
-  "cc.containers.Contact.phone.travel.title": "Viaggi",
-  "cc.containers.Contact.phone.packages.title": "Pacchi",
-  "cc.containers.Contact.phone.containers.title": "Containers",
-  "cc.containers.Contact.phone.translations.title": "Traduzioni",
-  "cc.containers.Contact.openingTime.title": "Orari di apertura",
+  "cc.components.Translations.header": "Traduzione",
+
+  "cc.components.Travel.header": "Viaggi",
+
+  "cc.components.Contact.header": "Dove siamo & Contatti",
+  "cc.components.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
+  "cc.components.Contact.address.title": "Indirizzo",
+  "cc.components.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
+  "cc.components.Contact.email.title": "Posta elettronica",
+  "cc.components.Contact.phone.title": "Telefono",
+  "cc.components.Contact.phone.office.title": "Ufficio",
+  "cc.components.Contact.phone.documents.title": "Documenti",
+  "cc.components.Contact.phone.travel.title": "Viaggi",
+  "cc.components.Contact.phone.packages.title": "Pacchi",
+  "cc.components.Contact.phone.containers.title": "Containers",
+  "cc.components.Contact.phone.translations.title": "Traduzioni",
+  "cc.components.Contact.openingTime.title": "Orari di apertura",
   "cc.dummy.end": ""
 }
