Add some translations

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,17 +2,26 @@
   "cc.components.Header.home": "Home",
   "cc.components.Header.about": "About us",
   "cc.components.Header.services": "Services",
+  "cc.components.Header.packages": "Packages & containers",
+  "cc.components.Header.translations": "Translations",
+  "cc.components.Header.consulate": "Consulate",
   "cc.components.Header.travel": "Travel",
   "cc.components.Header.contact": "Contact",
+
+  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
+  "cc.components.Footer.designer": "Designed with {love} by {link}.",
 
   "cc.components.HomePage.home.header": "Home",
   "cc.components.HomePage.about.header": "About us",
   "cc.components.HomePage.services.header": "Services",
-  "cc.components.HomePage.travel.header": "Travel",
+  "cc.components.HomePage.travel.header": "Tourist package",
+  "cc.components.HomePage.packages.header": "Packages e Containers",
+  "cc.components.HomePage.legal.header": "Legal Practice",
+  "cc.components.HomePage.travel.description": "Our experience in the sector as a travel agency, allows to to suggest the best solutions to the request of our clients, organizing personalized tripos to Cuba.",
+  "cc.components.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
+  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
   "cc.components.HomePage.contact.header": "Contact",
-
-  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
-  "cc.components.Footer.designer": "Designed with {love} by {link}.",
+  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
   "cc.components.About.header": "We can do it for you!",
   "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
