--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -2,17 +2,26 @@
   "cc.components.Header.home": "Inicio",
   "cc.components.Header.about": "Quiénes somos",
   "cc.components.Header.services": "Servicios",
+  "cc.components.Header.packages": "Paquetes y contenedores",
+  "cc.components.Header.translations": "Traducción",
+  "cc.components.Header.consulate": "Consulado",
   "cc.components.Header.travel": "Viajes",
   "cc.components.Header.contact": "Contacto",
+
+  "cc.components.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
+  "cc.components.Footer.designer": "Diseñado con {love} por {link}.",
 
   "cc.components.HomePage.home.header": "Inicio",
   "cc.components.HomePage.about.header": "Quiénes somos",
   "cc.components.HomePage.services.header": "Servicios",
-  "cc.components.HomePage.travel.header": "Viajes",
+  "cc.components.HomePage.travel.header": "Paquete turístico",
+  "cc.components.HomePage.packages.header": "Paquetes y contenedores",
+  "cc.components.HomePage.legal.header": "Pratiche legali",
+  "cc.components.HomePage.travel.description": "Nuestra experiencia en el sector como agencia turística, nos permite encontrar las mejores soluciones a los requerimientos de nuestros clientes, mediante la organización de viajes personalizados a Cuba.",
+  "cc.components.HomePage.packages.description": "Cuba Conmigo ofrece a sus clientes la mejor tarifa para envíos a Cuba. Gracias a los servicios ofrecidos por Cuba Conmigo se ha podido efectuar la expedición con facilidad y seguridad.",
+  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
   "cc.components.HomePage.contact.header": "Contacto",
-
-  "cc.components.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
-  "cc.components.Footer.designer": "Diseñado con {love} por {link}.",
+  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
   "cc.components.About.header": "¡Nosotros nos encargamos!",
   "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
