abreviate namespace of translations

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,45 +1,45 @@
 {
-  "cc.components.Header.home": "Home",
-  "cc.components.Header.about": "About us",
-  "cc.components.Header.services": "Services",
-  "cc.components.Header.packages": "Packages & containers",
-  "cc.components.Header.translations": "Translations",
-  "cc.components.Header.consulate": "Consulate",
-  "cc.components.Header.travel": "Travel",
-  "cc.components.Header.contact": "Contact",
+  "cc.Header.home": "Home",
+  "cc.Header.about": "About us",
+  "cc.Header.services": "Services",
+  "cc.Header.packages": "Packages & containers",
+  "cc.Header.translations": "Translations",
+  "cc.Header.consulate": "Consulate",
+  "cc.Header.travel": "Travel",
+  "cc.Header.contact": "Contact",
 
-  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
-  "cc.components.Footer.designer": "Designed with {love} by {link}.",
+  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
+  "cc.Footer.designer": "Designed with {love} by {link}.",
 
-  "cc.components.HomePage.home.header": "Home",
-  "cc.components.HomePage.about.header": "About us",
-  "cc.components.HomePage.services.header": "Services",
-  "cc.components.HomePage.travel.header": "Tourist package",
-  "cc.components.HomePage.packages.header": "Packages e Containers",
-  "cc.components.HomePage.legal.header": "Legal Practice",
-  "cc.components.HomePage.travel.description": "Our experience in the sector as a travel agency, allows to to suggest the best solutions to the request of our clients, organizing personalized tripos to Cuba.",
-  "cc.components.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
-  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
-  "cc.components.HomePage.contact.header": "Contact",
-  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.HomePage.home.header": "Home",
+  "cc.HomePage.about.header": "About us",
+  "cc.HomePage.services.header": "Services",
+  "cc.HomePage.travel.header": "Tourist package",
+  "cc.HomePage.packages.header": "Packages e Containers",
+  "cc.HomePage.legal.header": "Legal Practice",
+  "cc.HomePage.travel.description": "Our experience in the sector as a travel agency, allows to to suggest the best solutions to the request of our clients, organizing personalized tripos to Cuba.",
+  "cc.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
+  "cc.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.HomePage.contact.header": "Contact",
+  "cc.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
-  "cc.components.About.header": "We can do it for you!",
-  "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
+  "cc.About.header": "We can do it for you!",
+  "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
-  "cc.components.Translations.header": "Translations",
+  "cc.Translations.header": "Translations",
 
-  "cc.components.Contact.header": "Who we are & Contact",
-  "cc.components.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
-  "cc.components.Contact.address.title": "Address",
-  "cc.components.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
-  "cc.components.Contact.email.title": "Email",
-  "cc.components.Contact.phone.title": "Telephone",
-  "cc.components.Contact.phone.office.title": "Office",
-  "cc.components.Contact.phone.documents.title": "Documents",
-  "cc.components.Contact.phone.travel.title": "Travel",
-  "cc.components.Contact.phone.packages.title": "Packages",
-  "cc.components.Contact.phone.containers.title": "Containers",
-  "cc.components.Contact.phone.translations.title": "Translations",
-  "cc.components.Contact.openingTime.title": "Opening time",
+  "cc.Contact.header": "Who we are & Contact",
+  "cc.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
+  "cc.Contact.address.title": "Address",
+  "cc.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
+  "cc.Contact.email.title": "Email",
+  "cc.Contact.phone.title": "Telephone",
+  "cc.Contact.phone.office.title": "Office",
+  "cc.Contact.phone.documents.title": "Documents",
+  "cc.Contact.phone.travel.title": "Travel",
+  "cc.Contact.phone.packages.title": "Packages",
+  "cc.Contact.phone.containers.title": "Containers",
+  "cc.Contact.phone.translations.title": "Translations",
+  "cc.Contact.openingTime.title": "Opening time",
   "cc.dummy.end": ""
 }
