--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -1,45 +1,45 @@
 {
-  "cc.components.Header.home": "Inicio",
-  "cc.components.Header.about": "Quiénes somos",
-  "cc.components.Header.services": "Servicios",
-  "cc.components.Header.packages": "Paquetes y contenedores",
-  "cc.components.Header.translations": "Traducción",
-  "cc.components.Header.consulate": "Consulado",
-  "cc.components.Header.travel": "Viajes",
-  "cc.components.Header.contact": "Contacto",
+  "cc.Header.home": "Inicio",
+  "cc.Header.about": "Quiénes somos",
+  "cc.Header.services": "Servicios",
+  "cc.Header.packages": "Paquetes y contenedores",
+  "cc.Header.translations": "Traducción",
+  "cc.Header.consulate": "Consulado",
+  "cc.Header.travel": "Viajes",
+  "cc.Header.contact": "Contacto",
 
-  "cc.components.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
-  "cc.components.Footer.designer": "Diseñado con {love} por {link}.",
+  "cc.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
+  "cc.Footer.designer": "Diseñado con {love} por {link}.",
 
-  "cc.components.HomePage.home.header": "Inicio",
-  "cc.components.HomePage.about.header": "Quiénes somos",
-  "cc.components.HomePage.services.header": "Servicios",
-  "cc.components.HomePage.travel.header": "Paquete turístico",
-  "cc.components.HomePage.packages.header": "Paquetes y contenedores",
-  "cc.components.HomePage.legal.header": "Pratiche legali",
-  "cc.components.HomePage.travel.description": "Nuestra experiencia en el sector como agencia turística, nos permite encontrar las mejores soluciones a los requerimientos de nuestros clientes, mediante la organización de viajes personalizados a Cuba.",
-  "cc.components.HomePage.packages.description": "Cuba Conmigo ofrece a sus clientes la mejor tarifa para envíos a Cuba. Gracias a los servicios ofrecidos por Cuba Conmigo se ha podido efectuar la expedición con facilidad y seguridad.",
-  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
-  "cc.components.HomePage.contact.header": "Contacto",
-  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.HomePage.home.header": "Inicio",
+  "cc.HomePage.about.header": "Quiénes somos",
+  "cc.HomePage.services.header": "Servicios",
+  "cc.HomePage.travel.header": "Paquete turístico",
+  "cc.HomePage.packages.header": "Paquetes y contenedores",
+  "cc.HomePage.legal.header": "Pratiche legali",
+  "cc.HomePage.travel.description": "Nuestra experiencia en el sector como agencia turística, nos permite encontrar las mejores soluciones a los requerimientos de nuestros clientes, mediante la organización de viajes personalizados a Cuba.",
+  "cc.HomePage.packages.description": "Cuba Conmigo ofrece a sus clientes la mejor tarifa para envíos a Cuba. Gracias a los servicios ofrecidos por Cuba Conmigo se ha podido efectuar la expedición con facilidad y seguridad.",
+  "cc.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.HomePage.contact.header": "Contacto",
+  "cc.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
-  "cc.components.About.header": "¡Nosotros nos encargamos!",
-  "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
+  "cc.About.header": "¡Nosotros nos encargamos!",
+  "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
-  "cc.components.Translations.header": "Traducciones",
+  "cc.Translations.header": "Traducciones",
 
-  "cc.components.Contact.header": "Información de contacto",
-  "cc.components.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
-  "cc.components.Contact.address.title": "Dirección",
-  "cc.components.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
-  "cc.components.Contact.email.title": "Email",
-  "cc.components.Contact.phone.title": "Teléfono",
-  "cc.components.Contact.phone.office.title": "Oficina",
-  "cc.components.Contact.phone.documents.title": "Documentos",
-  "cc.components.Contact.phone.travel.title": "Viajes",
-  "cc.components.Contact.phone.packages.title": "Paquetes",
-  "cc.components.Contact.phone.containers.title": "Contenedores",
-  "cc.components.Contact.phone.translations.title": "Traducciones",
-  "cc.components.Contact.openingTime.title": "Horario de apertura",
+  "cc.Contact.header": "Información de contacto",
+  "cc.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
+  "cc.Contact.address.title": "Dirección",
+  "cc.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
+  "cc.Contact.email.title": "Email",
+  "cc.Contact.phone.title": "Teléfono",
+  "cc.Contact.phone.office.title": "Oficina",
+  "cc.Contact.phone.documents.title": "Documentos",
+  "cc.Contact.phone.travel.title": "Viajes",
+  "cc.Contact.phone.packages.title": "Paquetes",
+  "cc.Contact.phone.containers.title": "Contenedores",
+  "cc.Contact.phone.translations.title": "Traducciones",
+  "cc.Contact.openingTime.title": "Horario de apertura",
   "cc.dummy.end": ""
 }
