--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -1,49 +1,51 @@
 {
-  "cc.components.Header.home": "Inizio",
-  "cc.components.Header.about": "Su di noi",
-  "cc.components.Header.services": "Servizi",
-  "cc.components.Header.packages": "Pacchi e containers",
-  "cc.components.Header.translations": "Traduzioni",
-  "cc.components.Header.consulate": "Consolato",
-  "cc.components.Header.travel": "Viaggi",
-  "cc.components.Header.contact": "Contatti",
+  "cc.Header.home": "Inizio",
+  "cc.Header.about": "Su di noi",
+  "cc.Header.services": "Servizi",
+  "cc.Header.packages": "Pacchi e containers",
+  "cc.Header.translations": "Traduzioni",
+  "cc.Header.consulate": "Consolato",
+  "cc.Header.travel": "Viaggi",
+  "cc.Header.contact": "Contatti",
 
-  "cc.components.Footer.copyright": "© 2017 Associazione Cuba Conmigo. Diritti riservati. ",
-  "cc.components.Footer.designer": "Disegnato con {love} da {link}.",
+  "cc.Footer.about.header": "Su di noi",
+  "cc.Footer.about.body": "Perché non solo è importante fare quello che si ama, ma è pure importante amare quello che si fà! Questo concetto è palpabile conoscendo Maria Luisa negli uffici di Piazza Sante Bargellini N°3, puoi apprezzarne il rispetto che porta al proprio lavoro ed alle persone che interagiscono con lei. Cuba Conmigo offre consulenze sempre in forma gratuita anche su situazioni di particolare complessità, suggerendo sempre soluzioni ottimali alle esigenze della propria clientela.",
+  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. Diritti riservati. ",
+  "cc.Footer.designer": "Disegnato con {love} da {link}.",
 
-  "cc.components.HomePage.home.header": "Inizio",
-  "cc.components.HomePage.about.header": "Su di noi",
-  "cc.components.HomePage.services.header": "Servizi",
-  "cc.components.HomePage.travel.header": "Pacchetti turistici",
-  "cc.components.HomePage.packages.header": "Pacchi e Containers",
-  "cc.components.HomePage.legal.header": "Pratiche legali",
-  "cc.components.HomePage.travel.description": "La nostra esperienza nel settore come agenzia turistica, ci permette di suggerire le migliore soluzioni alle richieste della nostra clientela, organizzando viaggi personalizzati a Cuba.",
-  "cc.components.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
-  "cc.components.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
-  "cc.components.HomePage.contact.header": "Contatti",
-  "cc.components.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.HomePage.home.header": "Inizio",
+  "cc.HomePage.about.header": "Su di noi",
+  "cc.HomePage.services.header": "Servizi",
+  "cc.HomePage.travel.header": "Pacchetti turistici",
+  "cc.HomePage.packages.header": "Pacchi e Containers",
+  "cc.HomePage.legal.header": "Pratiche legali",
+  "cc.HomePage.travel.description": "La nostra esperienza nel settore come agenzia turistica, ci permette di suggerire le migliore soluzioni alle richieste della nostra clientela, organizzando viaggi personalizzati a Cuba.",
+  "cc.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
+  "cc.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.HomePage.contact.header": "Contatti",
+  "cc.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
 
-  "cc.components.About.header": "Ciò che possiamo fare per te!",
-  "cc.components.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
+  "cc.About.header": "Ciò che possiamo fare per te!",
+  "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
-  "cc.components.Services.header": "Servizi",
+  "cc.Services.header": "Servizi",
 
-  "cc.components.Translations.header": "Traduzione",
+  "cc.Translations.header": "Traduzione",
 
-  "cc.components.Travel.header": "Viaggi",
+  "cc.Travel.header": "Viaggi",
 
-  "cc.components.Contact.header": "Dove siamo & Contatti",
-  "cc.components.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
-  "cc.components.Contact.address.title": "Indirizzo",
-  "cc.components.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
-  "cc.components.Contact.email.title": "Posta elettronica",
-  "cc.components.Contact.phone.title": "Telefono",
-  "cc.components.Contact.phone.office.title": "Ufficio",
-  "cc.components.Contact.phone.documents.title": "Documenti",
-  "cc.components.Contact.phone.travel.title": "Viaggi",
-  "cc.components.Contact.phone.packages.title": "Pacchi",
-  "cc.components.Contact.phone.containers.title": "Containers",
-  "cc.components.Contact.phone.translations.title": "Traduzioni",
-  "cc.components.Contact.openingTime.title": "Orari di apertura",
+  "cc.Contact.header": "Dove siamo & Contatti",
+  "cc.Contact.header.message": "Si prega di chiamare il nostro ufficio per fissare un appuntamento, oppure compilare il modulo sottostante e vi contatteremo in 24 ore.",
+  "cc.Contact.address.title": "Indirizzo",
+  "cc.Contact.address.text": "Piazza Sante Bargellini, 3. 00157 Roma",
+  "cc.Contact.email.title": "Posta elettronica",
+  "cc.Contact.phone.title": "Telefono",
+  "cc.Contact.phone.office.title": "Ufficio",
+  "cc.Contact.phone.documents.title": "Documenti",
+  "cc.Contact.phone.travel.title": "Viaggi",
+  "cc.Contact.phone.packages.title": "Pacchi",
+  "cc.Contact.phone.containers.title": "Containers",
+  "cc.Contact.phone.translations.title": "Traduzioni",
+  "cc.Contact.openingTime.title": "Orari di apertura",
   "cc.dummy.end": ""
 }
