Cambiar texto de copyright

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -8,7 +8,7 @@
   "cc.Header.travel": "Travel",
   "cc.Header.contact": "Contact",
 
-  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. All rights reserved. ",
+  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. ",
   "cc.Footer.designer": "Designed with {love} by {link}.",
 
   "cc.HomePage.home.header": "Home",
