--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -8,7 +8,7 @@
   "cc.Header.travel": "Viajes",
   "cc.Header.contact": "Contacto",
 
-  "cc.Footer.copyright": "© 2017 Asociación Cuba Conmigo. Todos los derechos reservados. ",
+  "cc.Footer.copyright": "© 2017 Asociación Cuba Conmigo. ",
   "cc.Footer.designer": "Diseñado con {love} por {link}.",
 
   "cc.HomePage.home.header": "Inicio",
