--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -10,7 +10,7 @@
 
   "cc.Footer.about.header": "Su di noi",
   "cc.Footer.about.body": "Perché non solo è importante fare quello che si ama, ma è pure importante amare quello che si fà! Questo concetto è palpabile conoscendo Maria Luisa negli uffici di Piazza Sante Bargellini N°3, puoi apprezzarne il rispetto che porta al proprio lavoro ed alle persone che interagiscono con lei. Cuba Conmigo offre consulenze sempre in forma gratuita anche su situazioni di particolare complessità, suggerendo sempre soluzioni ottimali alle esigenze della propria clientela.",
-  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. Diritti riservati. ",
+  "cc.Footer.copyright": "© 2017 Associazione Cuba Conmigo. ",
   "cc.Footer.designer": "Disegnato con {love} da {link}.",
 
   "cc.HomePage.home.header": "Inizio",
