Remove hardcoding from CallToAction

--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -25,9 +25,16 @@
   "cc.HomePage.legal.header": "Pratiche legali",
   "cc.HomePage.travel.description": "La nostra esperienza nel settore come agenzia turistica, ci permette di suggerire le migliore soluzioni alle richieste della nostra clientela, organizzando viaggi personalizzati a Cuba.",
   "cc.HomePage.packages.description": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni con facilità e sicurezza.",
-  "cc.HomePage.legal.description": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.HomePage.legal.description": "Operiamo nel settore dei servizi alla comunità cubana mediante supporto per la produzione dei documenti consolari in stretta collaborazione con il Consolato Cubano in Roma.",
   "cc.HomePage.contact.header": "Contatti",
   "cc.HomePage.contact.message": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.HomePage.hero.title": "Cuba Conmigo",
+  "cc.HomePage.hero.subtitle": "Una porta su Cuba aperta dall'Italia",
+  "cc.HomePage.hero.button.info": "Contattaci",
+  "cc.HomePage.call.title": "Make the move",
+  "cc.HomePage.call.subtitle": "Il difficile diventa facile quando pensiamo che facile sia!",
+  "cc.HomePage.call.button.services": "Apprendere più",
+  "cc.HomePage.call.button.contact": "Contattaci",
 
   "cc.About.header": "Ciò che possiamo fare per te!",
   "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
