--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -40,17 +40,29 @@
   "cc.About.intro": "L’ Associazione per soddisfare le richieste degli associati, fornisce loro le seguente attività:",
 
   "cc.Services.header": "Servizi",
-  "cc.Services.consulate.title": "Documenti legali.",
-  "cc.Services.consulate.subtitle": "Sportello Consolare.",
-  "cc.Services.consulate.body": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.Services.consulate.title": "Gestione Pratiche Burocratiche",
+  "cc.Services.consulate.subtitle": "per la Comunità Italo-Cubana.",
+  "cc.Services.consulate.body": "Consulenza riguardo alla documentazione necessaria da presentare a Cuba per conto di società italiane.",
+  "cc.Services.consulate.list.visa": "Visto turistico o familiare per l'ingreso di stranieri a Italia",
+  "cc.Services.consulate.list.consulate": "Servizi preso consolato cubano a Roma",
+  "cc.Services.consulate.list.certificate": "Certificati a Cuba",
+  "cc.Services.consulate.list.citizenship": "Richiesta della cittadinanza italiana",
+  "cc.Services.consulate.list.healthEnsurance": "Assicurazione medico bagaglio obbligatoria per Cuba",
+  "cc.Services.showMore": "Sapere più…",
   "cc.Services.translations.title": "Traduzioni",
   "cc.Services.translations.subtitle": "giurate e libere.",
   "cc.Services.translations.body": "Consulenza riguardo alla documentazione necessaria da presentare a Cuba per conto di società italiane.",
-  "cc.Services.packages.title": "Pacchi.",
-  "cc.Services.packages.subtitle": "Sportello Consolare.",
-  "cc.Services.packages.body": "Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet. Lorem Ipsum Dolor sit amet.",
+  "cc.Services.translations.explanation": "Traduzioni libere o giurate di certificati, diplomi e documenti.",
+  "cc.Services.packages.title": "Invio pacchi e containers.",
+  "cc.Services.packages.subtitle": "Prezzi economici, velocità e sicurezza a porta di mano!",
+  "cc.Services.packages.body": "Cuba Conmigo offre ai propri clienti le migliori tariffe per gli invii a Cuba. Grazie a tutti i servizi offerti da Cuba Conmigo si possono effettuare le spedizioni pacchi a Cuba con facilità e sicurezza.",
+  "cc.Services.containers.body": "Inoltre Cuba Conmigo è specializzata nell’invio di containers a Cuba “chiavi in mano”, ovvero seguendo ogni fase dell’operazione, dallo studio della documentazione doganale, fino alla apposizione dei sigilli  al container che via mare arriverà a destinazione. Qualora il titolare del container non fosse nella possibilità di presenziare all’apertura del container stesso a Cuba per i controlli doganali, Cuba Conmigo è in grado di sostituirsi al cliente anche in questa fase finale.",
 
-  "cc.Translations.header": "Traduzione",
+  "cc.Translations.header": "Traduzione giurata e libera.",
+  "cc.Translations.subtitle": "Consulenza riguardo alla documentazione necessaria da presentare a cuba per conto di società italiane.",
+  "cc.Translations.generalInfo": "Presso gli uffici di Cuba Conmigo, è presente un traduttore giurato il quale, oltre che prestare in forma del tutto gratuita consulenza sull’iter operativo da adottare per l’espletamento delle pratiche, provvederà a tradurre e legalizzare tutti i documenti che di volta in volta si rendessero necessari. Di questa opportunità possono avvalersi anche società che abbiano bisogno di tradurre o legalizzare documenti societari come atti costitutivi, certificati camerali, bilanci, lettere di referenze e quant’altro.",
+  "cc.Translations.legal.title": "Traduzione Asseveratta",
+  "cc.Translations.legal.text": "Quando un documento legale deve essere tradotto per essere presentato presso un ente o un’istituzione deve mantenere il proprio valore legale: in questo caso è necessaria la traduzione asseverata (o traduzione giurata) in tribunale. La nostra agenzia, garantisce un servizio professionale e competente di traduzioni giurate. Qualora necessitaste di traduzioni con valore legale di documenti quali diplomi, certificati e altri documenti ufficiali, rivolgervi a noi vi farà risparmiare tempo e denaro.Vi consegneremo traduzioni asseverate complete pronte per essere utilizzate in ambito ufficiale. Le traduzioni giurate di ogni tipo e per ogni esigenza. Tra i servizi di ambito legale la richiesta di traduzioni asseverate diventa ogni giorno più frequente. I confini di frontiera vengono abbattuti e la realtà odierna è sempre più multietnica, pertanto sempre più spesso è necessario tradurre documenti legali perché possano essere presentati per questioni ufficiali. Perciò la traduzione validata in tribunale assume maggiore importanza. Il servizio di asseverazione di traduzioni della nostra agenzia è garantita da un traduttore giurato con più di 25 anni di esperienza.",
 
   "cc.Travel.header": "Viaggi",
 
